fix: tweak logo letter spacing

--- a/src/main.scss
+++ b/src/main.scss
@@ -38,6 +38,7 @@
 	font-family: 'Dosis', sans-serif;
 	font-size: 1.7rem;
 	font-weight: 600;
+	letter-spacing: -0.5px;
 
 	svg {
 		min-width: 1.7rem;
